--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sit725-2024-t1-prac2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
